[gd_scene load_steps=5 format=3 uid="uid://1simelenu6sw"]

[ext_resource type="Texture2D" uid="uid://cn18etnduf77k" path="res://PixelOcean.png" id="1_08fay"]
[ext_resource type="Script" path="res://LevelSelect.gd" id="2_eai3i"]
[ext_resource type="Theme" uid="uid://b5nghfdlp4mp7" path="res://new_theme.tres" id="3_3xncu"]
[ext_resource type="FontFile" uid="uid://cuwevlkiu8qjg" path="res://Panic.ttf" id="4_0er0f"]

[node name="Level Select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_08fay")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_eai3i")

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_3xncu")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main/CenterContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer"]
layout_direction = 1
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0.341176, 0.513726, 0.847059, 1)
theme_override_colors/font_shadow_color = Color(0.67451, 0.741176, 1, 1)
theme_override_colors/font_outline_color = Color(0.341176, 0.513726, 0.847059, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 2
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("4_0er0f")
theme_override_font_sizes/font_size = 125
text = "LEVEL SELECT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lvl1BTN" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_3xncu")
theme_override_font_sizes/font_size = 35
text = "Level 1 - Seaside Stroll"

[node name="lvl2BTN" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 35
text = "Level 2 - Whirlwind Wanderer"

[node name="lvl3BTN" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 35
text = "Level 3 - Pier Prowler"

[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/lvl1BTN" to="CanvasLayer" method="_on_play_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/lvl1BTN" to="CanvasLayer" method="_on_lvl_1btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/lvl2BTN" to="CanvasLayer" method="_on_settings_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/lvl2BTN" to="CanvasLayer" method="_on_lvl_2btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/lvl3BTN" to="CanvasLayer" method="_on_quit_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/lvl3BTN" to="CanvasLayer" method="_on_lvl_3btn_pressed"]
